[package]
name = "rust-agent-bounty-hunter"
version = "1.0.0"
edition = "2021"
description = "Rust-based AI Agent Bounty Hunter Framework for RustChain"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
futures = "0.3"
